Updating the Openfreight.html page for showcasing

--- a/_includes/service-with-icon.html
+++ b/_includes/service-with-icon.html
@@ -1,6 +1,6 @@
 <div class="column {{ include.columnClass | default: 'is-6' }}">
     <div class="columns">
-        <div class="column is-narrow">
+        <div class="column is-narrow has-text-centered">
             <span class="icon is-large">
                 <i class="fa fa-3x fa-{{ include.icon | default: 'home' }}"></i>
             </span>
