--- a/_includes/hero-featured.html
+++ b/_includes/hero-featured.html
@@ -1,23 +1,22 @@
 <!-- Hero -->
-<section class="tig-hero hero is-medium is-dark">
+<section class="tig-hero hero is-medium is-info has-overhanging-bottom is-bold">
     <div class="hero-body">
         <div class="tig-fake-menu"></div>
         <div class="container is-thin">
-            <div class="columns has-columns-at-center">
-                <div class="column">
-                    <h1 class="tig-hero__text title is-size-3 has-text-weight-light">
-                        Lack of innovation and poor customer service <br />
-                        are the top ranked business issues with freight providers, <br />
-                        find out why TIG is different.
-                    </h1>
-                    <p class="tig-hero__description is-size-7">Source: 2017 EFT Global Logistics Report</p>
-                    <p>&nbsp;</p>
-                    <a class="tig-hero__button button is-dark" href="#why">
-                        Find Out Why
-                    </a>
+            <div class="columns is-large">
+                <div class="column is-7">
+                    <h1 class="tig-hero__text title is-size-3 has-text-weight-light">{{ include.title | default: "Default value" }}</h1>
+                    <div class="content">
+                        <p class="tig-hero__description is-size-5">{{ include.description | default: "Default value" }}</p>
+                        <p><a class="tig-hero__button button is-large is-info" href="#find-out-more">
+                            Find Out More
+                        </a>&nbsp;&nbsp;<a class="tig-hero__button button is-large is-light is-outlined" href="/contact/">
+                            Contact Us Now
+                        </a></p>
+                    </div>
                 </div>
-                <div class="column">
-                    <img src="https://placeimg.com/452/550/tech" class="is-overhanging-bottom is-block">  
+                <div class="column is-hidden-mobile">
+                    <img src="{{ include.image || default: 'https://placeimg.com/452/578/tech' }}" class="is-overhanging-bottom is-block">  
                 </div>
             </div>
         </div>
