Adding basic animations

--- a/_includes/default-content.html
+++ b/_includes/default-content.html
@@ -1,10 +1,3 @@
----
-layout: default
----
-{% include header.html %}
-{% include hero-featured.html title="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi non egestas lacus, vitae sollicitudin velit." description="Sed eu urna quis dui pellentesque tempor ut sed nulla. Sed pellentesque dui at odio suscipit ultrices. Donec tempor efficitur ligula, at lobortis neque tempus eu. Sed sed vehicula dolor, ac rhoncus odio." image="/assets/images/tig/mockup-iphone6.png" %}
-
-
 <!-- Intro Text -->
 <section class="section is-white p-t-xxl p-b-xxl">
     <div class="container is-thin">
@@ -18,7 +11,7 @@ layout: default
 </section>
 
 <!-- 2 Column - Image to the right -->
-<section class="section is-white is-bordered has-large-columns">
+<section class="section is-white is-bordered">
     <div class="container is-thin">
         <div class="columns is-large has-columns-at-center">
             <div class="column is-6">
@@ -34,7 +27,7 @@ layout: default
                 </div>
             </div>
             <div class="column is-6">
-                <img src="https://placeimg.com/783/481/tech" class="is-overhanging-right is-block" data-aos="fade-left">
+                <img src="https://placeimg.com/783/481/tech" class="is-overhanging-right is-block">
             </div>
         </div>
     </div>
@@ -70,11 +63,11 @@ layout: default
 
 
 <!-- 2 Column - Image to the left -->
-<section class="section is-white is-bordered has-large-columns">
+<section class="section is-white is-bordered">
     <div class="container is-thin">
         <div class="columns is-large has-columns-at-center">
             <div class="column is-6">
-                <img src="https://placeimg.com/783/481/tech" class="is-overhanging-left is-block" data-aos="fade-right">
+                <img src="https://placeimg.com/783/481/tech" class="is-overhanging-left is-block">
             </div>
             <div class="column is-6">
                 <div class="content">
@@ -108,7 +101,7 @@ layout: default
 
 
 <!-- 2 Column Artys -->
-<section class="section is-white has-large-columns">
+<section class="section is-white ">
     <div class="container is-thin">
         <div class="columns is-large has-columns-at-end">
             <div class="column has-text-right">
@@ -128,7 +121,7 @@ layout: default
 
 
 <!-- Boxed Panels -->
-<section class="section is-light is-bold has-boxed-columns has-large-columns">
+<section class="section is-light is-bold has-boxed-columns">
     <div class="container is-thin">
         <div class="columns is-large is-boxed">
 
@@ -178,5 +171,3 @@ layout: default
         </div>
     </div>
 </section>
-
-{% include footer.html %}
