--- a/assets/css/application.scss
+++ b/assets/css/application.scss
@@ -19,6 +19,7 @@
 //
 @import 'bulma/utilities/initial-variables';
 @import 'variables';
+@import 'aos/aos';
 @import 'bulma';
 @import 'font-awesome/font-awesome';
 @import 'spacing';
