--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -134,7 +134,7 @@
 </footer>
 
 
-<script src="{{ site.baseurl }}{{ "/assets/js/jquery-3.1.1.min.js" | prepend: site.baseurl }}"></script>
+<script src="{{ "/assets/js/aos.js" | prepend: site.baseurl }}"></script>
 <script src="{{ "/assets/js/main.js" | prepend: site.baseurl }}"></script>
 
 <!--
