--- a/_includes/hero-featured.html
+++ b/_includes/hero-featured.html
@@ -1,22 +1,25 @@
 <!-- Hero -->
-<section class="tig-hero hero is-medium is-info has-overhanging-bottom is-bold">
+<section class="tig-hero hero is-medium is-info has-overhanging-bottom is-bold has-large-columns">
     <div class="hero-body">
         <div class="tig-fake-menu"></div>
         <div class="container is-thin">
-            <div class="columns is-large">
+            <div class="columns has-columns-at-center is-large">
                 <div class="column is-7">
                     <h1 class="tig-hero__text title is-size-3 has-text-weight-light">{{ include.title | default: "Default value" }}</h1>
                     <div class="content">
                         <p class="tig-hero__description is-size-5">{{ include.description | default: "Default value" }}</p>
-                        <p><a class="tig-hero__button button is-large is-info" href="#find-out-more">
+                    </div>
+                    <div class="buttons">
+                        <a class="tig-hero__button button is-large is-info" href="#find-out-more">
                             Find Out More
-                        </a>&nbsp;&nbsp;<a class="tig-hero__button button is-large is-light is-outlined" href="/contact/">
+                        </a>
+                        <a class="tig-hero__button button is-large is-light is-outlined" href="/contact/">
                             Contact Us Now
-                        </a></p>
+                        </a>
                     </div>
                 </div>
-                <div class="column is-hidden-mobile">
-                    <img src="{{ include.image || default: 'https://placeimg.com/452/578/tech' }}" class="is-overhanging-bottom is-block">  
+                <div class="column is-hidden-mobile" data-aos="fade-up">
+                    <img src="{{ include.image || default: 'https://placeimg.com/452/578/tech' }}" class="is-overhanging-bottom is-block" data-aos="fade_left">  
                 </div>
             </div>
         </div>
