--- a/_includes/hero-small.html
+++ b/_includes/hero-small.html
@@ -4,7 +4,9 @@
         <div class="tig-fake-menu"></div>
         <div class="container is-thin">
             <h1 class="tig-hero__text title is-size-3 has-text-weight-light">{{ include.title | default: "Default value" }}</h1>
-            <p class="tig-hero__description is-size-7">{{ include.description | default: "Default value" }}</p>
+            <div class="content">
+                <p class="tig-hero__description is-size-5">{{ include.description | default: "Default value" }}</p>
+            </div>
         </div>
     </div>
 </section>
