--- a/_sass/_tig-columns.scss
+++ b/_sass/_tig-columns.scss
@@ -1,40 +1,61 @@
 $large-column-gap: $column-gap * 2;
-.columns.is-large > .column
-{
-    padding: $large-column-gap;
-}
-
-.columns.is-large
-{
-    margin-left: (-$large-column-gap);
-    margin-right: (-$large-column-gap);
-    margin-top: (-$large-column-gap);
-    &:last-child
-    {
-        margin-bottom: (-$large-column-gap);
-    }
-    &:not(:last-child)
-    {
-        margin-bottom: calc(1.5rem - #{$large-column-gap});
-    }
-}
-
 $small-column-gap: $column-gap / 2;
-.columns.is-small > .column
+
+
+@include tablet
 {
-    padding: $small-column-gap;
-}
-.columns.is-small
-{
-    margin-left: (-$small-column-gap);
-    margin-right: (-$small-column-gap);
-    margin-top: (-$small-column-gap);
-    &:last-child
+    // Columns - Is Large
+    .columns.is-large > .column
     {
-        margin-bottom: (-$small-column-gap);
+        padding: $large-column-gap;
     }
-    &:not(:last-child)
+
+    .columns.is-large
     {
-        margin-bottom: calc(1.5rem - #{$small-column-gap});
+        margin-left: (-$large-column-gap);
+        margin-right: (-$large-column-gap);
+        margin-top: (-$large-column-gap);
+        &:last-child
+        {
+            margin-bottom: (-$large-column-gap);
+        }
+        &:not(:last-child)
+        {
+            margin-bottom: calc(1.5rem - #{$large-column-gap});
+        }
+    }
+    // Fix issues on mobile, etc
+    .section.has-large-columns,
+    .hero.has-large-columns .hero-body
+    {
+        padding-left: $large-column-gap;
+        padding-right: $large-column-gap;
+    }
+
+    // Columns - Is Small
+    .columns.is-small > .column
+    {
+        padding: $small-column-gap;
+    }
+    .columns.is-small
+    {
+        margin-left: (-$small-column-gap);
+        margin-right: (-$small-column-gap);
+        margin-top: (-$small-column-gap);
+        &:last-child
+        {
+            margin-bottom: (-$small-column-gap);
+        }
+        &:not(:last-child)
+        {
+            margin-bottom: calc(1.5rem - #{$small-column-gap});
+        }
+    }
+    // Fix issues on mobile, etc
+    .section.has-small-columns,
+    .hero.has-small-columns .hero-body
+    {
+        padding-left: $small-column-gap;
+        padding-right: $small-column-gap;
     }
 }
