--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -1,5 +1,5 @@
 //
-// Bulma Colours
+// Bulma - Colours
 //
 
 $primary:      #895597 !default;
@@ -13,21 +13,22 @@ $purple:       #895597 !default;
 // $red:          hsl(348, 100%, 61%) !default;
 
 //
-// Variables
-//
-$body-bg: #000;
-
-//
-// Navbar
+// Bulma - Navbar
 //
 $navbar-background-color: transparent !default;
 $navbar-height: 5rem !default;
 
 //
-// Columns
+// Bulma - Columns
 //
 $column-gap: 1.75rem !default;
 
 //
-// Footer
+// Aos
 //
+$aos-distance: 50px !default;
+
+//
+// TIG Variables
+//
+$body-bg: #000;
