adding all blank pages

--- a/_includes/default-content.html
+++ b/_includes/default-content.html
@@ -1,3 +1,4 @@
+
 <!-- Intro Text -->
 <section class="section is-white p-t-xxl p-b-xxl">
     <div class="container is-thin">
@@ -11,7 +12,7 @@
 </section>
 
 <!-- 2 Column - Image to the right -->
-<section class="section is-white is-bordered">
+<section class="section is-white is-bordered has-large-columns">
     <div class="container is-thin">
         <div class="columns is-large has-columns-at-center">
             <div class="column is-6">
@@ -27,7 +28,7 @@
                 </div>
             </div>
             <div class="column is-6">
-                <img src="https://placeimg.com/783/481/tech" class="is-overhanging-right is-block">
+                <img src="https://placeimg.com/783/481/tech" class="is-overhanging-right is-block" data-aos="fade-left">
             </div>
         </div>
     </div>
@@ -63,11 +64,11 @@
 
 
 <!-- 2 Column - Image to the left -->
-<section class="section is-white is-bordered">
+<section class="section is-white is-bordered has-large-columns">
     <div class="container is-thin">
         <div class="columns is-large has-columns-at-center">
             <div class="column is-6">
-                <img src="https://placeimg.com/783/481/tech" class="is-overhanging-left is-block">
+                <img src="https://placeimg.com/783/481/tech" class="is-overhanging-left is-block" data-aos="fade-right">
             </div>
             <div class="column is-6">
                 <div class="content">
@@ -101,7 +102,7 @@
 
 
 <!-- 2 Column Artys -->
-<section class="section is-white ">
+<section class="section is-white has-large-columns">
     <div class="container is-thin">
         <div class="columns is-large has-columns-at-end">
             <div class="column has-text-right">
@@ -121,7 +122,7 @@
 
 
 <!-- Boxed Panels -->
-<section class="section is-light is-bold has-boxed-columns">
+<section class="section is-light is-bold has-boxed-columns has-large-columns">
     <div class="container is-thin">
         <div class="columns is-large is-boxed">
 
