Adding hero classes for Featured Headings

--- a/_includes/default-content.html
+++ b/_includes/default-content.html
@@ -36,9 +36,9 @@
 
 
 <!-- Services - With Icons -->
-<section class="section is-white is-medium is-bordered-bottom">
+<section class="section is-white is-medium is-bordered-bottom has-large-columns">
     <div class="container is-thin">
-        <div class="columns is-multiline">
+        <div class="columns is-multiline is-large">
             {% include service-with-icon.html icon="home" title="Learn from the best" description="Your personal growth is important to us, and we’ll give you everything you need to make it happen: learning budgets, mentorship opportunities." %}
             {% include service-with-icon.html icon="pencil" title="Duis sodales malesuada erat" description="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sodales malesuada erat, quis mattis leo euismod quis." %}
             {% include service-with-icon.html icon="plus" title="Suspendisse sagittis posuere interdum" description="Phasellus facilisis ante nec tempus pulvinar. Suspendisse sagittis posuere interdum. Integer a sem rhoncus, viverra ante non, imperdiet eros." %}
@@ -87,9 +87,9 @@
 </section>
 
 <!-- Services - No Icons -->
-<section class="section is-white is-small">
+<section class="section is-white is-small has-large-columns">
     <div class="container is-thin">
-        <div class="columns is-multiline">
+        <div class="columns is-multiline is-large">
             {% include service.html title="Learn from the best" description="Your personal growth is important to us, and we’ll give you everything you need to make it happen: learning budgets, mentorship opportunities." %}
             {% include service.html title="Learn from the best" description="Your personal growth is important to us, and we’ll give you everything you need to make it happen: learning budgets, mentorship opportunities." %}
             {% include service.html title="Learn from the best" description="Your personal growth is important to us, and we’ll give you everything you need to make it happen: learning budgets, mentorship opportunities." %}
