--- a/_includes/hero-featured.html
+++ b/_includes/hero-featured.html
@@ -1,5 +1,5 @@
 <!-- Hero -->
-<section class="tig-hero hero is-medium is-info has-overhanging-bottom is-bold has-large-columns">
+<section class="tig-hero hero is-medium has-overhanging-bottom has-large-columns {{ include.heroClass | default: "is-bold is-info" }}">
     <div class="hero-body">
         <div class="tig-fake-menu"></div>
         <div class="container is-thin">
