--- a/_includes/service.html
+++ b/_includes/service.html
@@ -1,4 +1,4 @@
-<div class="column is-6">
+<div class="column {{ include.columnClass | default: 'is-6' }}">
     <div class="content">
         <h3 class="has-text-info">{{ include.title | default: "Default value"}}</h3>
         <p>{{ include.description | default: "Default value"}}</p>
