--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,85 +3,78 @@ layout: default
 ---
 
 {% include header.html %}
-{% include hero-small.html %}
+{% include hero-small.html title=page.title description=" " %}
 
 <section class="section">
-    <div class="container is-fluid">
+    <div class="container is-thin">
         <div class="content">
             {{ content }}
         </div>
     </div>
 </section>
 {% if site.author.show_on_post or page.comments %}
-<div class="section">
-    <div class="container is-fluid">
+    <div class="section">
+        <div class="container is-thin">
 
-        {% if site.author.show_on_post %}
-        <div class="box">
-            <div class="media">
-                <div class="media-left">
-                    <figure class="image is-64x64">
-                        <img src="{{ site.author.image }}" alt="{{ site.author.name }}">
-                    </figure>
-                </div>
-                <div class="media-content">
-                    <div class="content">
+            {% if site.author.show_on_post %}
+            <div class="box">
+                <div class="media">
+                    <div class="media-left">
+                        <figure class="image is-64x64">
+                            <img src="{{ site.author.image }}" alt="{{ site.author.name }}">
+                        </figure>
+                    </div>
+                    <div class="media-content">
+                        <div class="content">
+                            <p>
+                                <strong>{{ site.author.name }}</strong>
+                                <br>
+                                {{ site.author.bio }}
+                            </p>
+                        </div>
                         <p>
-                            <strong>{{ site.author.name }}</strong>
-                            <br>
-                            {{ site.author.bio }}
+                            {% if site.author.github %}
+                            <a href="https://github.com/{{ site.author.github }}">
+                                    <span class="icon is-small">
+                                        <i class="fa fa-github"></i>
+                                    </span>
+                            </a>
+                            {% endif %}
+                            {% if site.author.facebook %}
+                            <a href="https://facebook.com/{{ site.author.facebook }}">
+                                    <span class="icon is-small">
+                                        <i class="fa fa-facebook"></i>
+                                    </span>
+                            </a>
+                            {% endif %}
+                            {% if site.author.twitter %}
+                            <a href="https://twitter.com/{{ site.author.twitter}}">
+                                    <span class="icon is-small">
+                                        <i class="fa fa-twitter"></i>
+                                    </span>
+                            </a>
+                            {% endif %}
+                            {% if site.author.instagram %}
+                            <a href="https://instagram.com/{{ site.author.instagram}}">
+                                    <span class="icon is-small">
+                                        <i class="fa fa-instagram"></i>
+                                    </span>
+                            </a>
+                            {% endif %}
+                            {% if site.author.tumblr %}
+                            <a href="https://tumblr.com/{{ site.author.tumblr}}">
+                                    <span class="icon is-small">
+                                        <i class="fa fa-tumblr"></i>
+                                    </span>
+                            </a>
+                            {% endif %}
                         </p>
                     </div>
-                    <p>
-                        {% if site.author.github %}
-                        <a href="https://github.com/{{ site.author.github }}">
-                                <span class="icon is-small">
-                                    <i class="fa fa-github"></i>
-                                </span>
-                        </a>
-                        {% endif %}
-                        {% if site.author.facebook %}
-                        <a href="https://facebook.com/{{ site.author.facebook }}">
-                                <span class="icon is-small">
-                                    <i class="fa fa-facebook"></i>
-                                </span>
-                        </a>
-                        {% endif %}
-                        {% if site.author.twitter %}
-                        <a href="https://twitter.com/{{ site.author.twitter}}">
-                                <span class="icon is-small">
-                                    <i class="fa fa-twitter"></i>
-                                </span>
-                        </a>
-                        {% endif %}
-                        {% if site.author.instagram %}
-                        <a href="https://instagram.com/{{ site.author.instagram}}">
-                                <span class="icon is-small">
-                                    <i class="fa fa-instagram"></i>
-                                </span>
-                        </a>
-                        {% endif %}
-                        {% if site.author.tumblr %}
-                        <a href="https://tumblr.com/{{ site.author.tumblr}}">
-                                <span class="icon is-small">
-                                    <i class="fa fa-tumblr"></i>
-                                </span>
-                        </a>
-                        {% endif %}
-                    </p>
                 </div>
             </div>
+            {% endif %}
         </div>
-        {% endif %}
-
-        {% if page.comments %}
-        <div class="box">
-            <div id="disqus_thread"></div>
-            <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-        </div>
-        {% endif %}
     </div>
-</div>
 {% endif %}
 
 {% include footer.html %}
