--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -3,14 +3,14 @@
     <div class="hero-body">
         <div class="tig-fake-menu"></div>
         <div class="container is-thin">
-            <h1 class="tig-hero__text title is-size-3 has-text-weight-light">
+            <h1 class="tig-hero__text title is-size-3 has-text-weight-light" data-aos="fade-up" data-aos-delay="0" data-aos-offset="0">
                 Lack of innovation and poor customer service <br />
                 are the top ranked business issues with freight providers, <br />
                 find out why TIG is different.
             </h1>
-            <p class="tig-hero__description is-size-7">Source: 2017 EFT Global Logistics Report</p>
+            <p class="tig-hero__description is-size-7" data-aos="fade-up" data-aos-delay="150" data-aos-offset="0">Source: 2017 EFT Global Logistics Report</p>
             <p>&nbsp;</p>
-            <a class="tig-hero__button button is-dark" href="#why">
+            <a class="tig-hero__button button is-dark" href="#why" data-aos="fade-up" data-aos-delay="300" data-aos-offset="0">
                 Find Out Why
             </a>
         </div>
