--- a/_includes/hero-featured.html
+++ b/_includes/hero-featured.html
@@ -5,11 +5,11 @@
         <div class="container is-thin">
             <div class="columns has-columns-at-center is-large">
                 <div class="column is-7">
-                    <h1 class="tig-hero__text title is-size-3 has-text-weight-light">{{ include.title | default: "Default value" }}</h1>
-                    <div class="content">
+                    <h1 class="tig-hero__text title is-size-3 has-text-weight-light" data-aos="fade-up" data-aos-delay="0" data-aos-offset="0">{{ include.title | default: "Default value" }}</h1>
+                    <div class="content" data-aos="fade-up" data-aos-delay="150" data-aos-offset="0">
                         <p class="tig-hero__description is-size-5">{{ include.description | default: "Default value" }}</p>
                     </div>
-                    <div class="buttons">
+                    <div class="buttons" data-aos="fade-up" data-aos-delay="300" data-aos-offset="0">
                         <a class="tig-hero__button button is-large is-info" href="#find-out-more">
                             Find Out More
                         </a>
