--- a/_includes/hero-small.html
+++ b/_includes/hero-small.html
@@ -3,8 +3,8 @@
     <div class="hero-body">
         <div class="tig-fake-menu"></div>
         <div class="container is-thin">
-            <h1 class="tig-hero__text title is-size-3 has-text-weight-light">{{ include.title | default: "Default value" }}</h1>
-            <div class="content">
+            <h1 class="tig-hero__text title is-size-3 has-text-weight-light" data-aos="fade-up" data-aos-delay="0" data-aos-offset="0">{{ include.title | default: "Default value" }}</h1>
+            <div class="content" data-aos="fade-up" data-aos-delay="150" data-aos-offset="0">
                 <p class="tig-hero__description is-size-5">{{ include.description | default: "Default value" }}</p>
             </div>
         </div>
